syntax = "proto3";

package api.pms;

import "api/pms/api.proto";
import "google/api/annotations.proto";

option go_package = "edu/api/pms;pms";
option java_multiple_files = true;
option java_package = "api.pms";

service Admin {
    rpc ListAlbum (ListAlbumRequest) returns (ApiReply) {
        option (google.api.http) = {
            get: "/admin/v1/pmsalbumList"
        };
    };
    rpc GetAlbum (GetAlbumRequest) returns (ApiReply) {
        option (google.api.http) = {
            get: "/admin/v1/pmsalbum/{id}"
        };
    };
    rpc CreateAlbum (Album) returns (ApiReply) {
        option (google.api.http) = {
            post: "/admin/v1/pmsalbum"
        };
    };
    rpc UpdateAlbum (Album) returns (ApiReply){
        option (google.api.http) = {
            put: "/admin/v1/pmsalbum"
        };
    };
    rpc DeleteAlbum (DeleteAlbumRequest) returns (ApiReply) {
        option (google.api.http) = {
            delete: "/admin/v1/pmsalbum/{ids}"
        };
    };
    rpc ListBrand (ListBrandRequest) returns (ApiReply) {
        option (google.api.http) = {
            get: "/admin/v1/pmsbrandList"
        };
    };
    rpc GetBrand (GetBrandRequest) returns (ApiReply) {
        option (google.api.http) = {
            get: "/admin/v1/pmsbrand/{id}"
        };
    };
    rpc CreateBrand (Brand) returns (ApiReply) {
        option (google.api.http) = {
            post: "/admin/v1/pmsbrand"
        };
    };
    rpc UpdateBrand (Brand) returns (ApiReply){
        option (google.api.http) = {
            put: "/admin/v1/pmsbrand"
        };
    };
    rpc DeleteBrand (DeleteBrandRequest) returns (ApiReply) {
        option (google.api.http) = {
            delete: "/admin/v1/pmsbrand/{ids}"
        };
    };
    rpc ListProductCategory (ListProductCategoryRequest) returns (ApiReply) {
        option (google.api.http) = {
            get: "/admin/v1/pmsproductcategoryList"
        };
    };
    rpc ListProductCategoryTree (ListProductCategoryTreeRequest) returns (ApiReply) {
        option (google.api.http) = {
            get: "/admin/v1/pmsproductcategorytreeList"
        };
    };
    rpc GetProductCategory (GetProductCategoryRequest) returns (ApiReply) {
        option (google.api.http) = {
            get: "/admin/v1/pmsproductcategory/{id}"
        };
    };
    rpc CreateProductCategory (ProductCategory) returns (ApiReply) {
        option (google.api.http) = {
            post: "/admin/v1/pmsproductcategory"
        };
    };
    rpc UpdateProductCategory (ProductCategory) returns (ApiReply){
        option (google.api.http) = {
            put: "/admin/v1/pmsproductcategory"
        };
    };
    rpc DeleteProductCategory (DeleteProductCategoryRequest) returns (ApiReply) {
        option (google.api.http) = {
            delete: "/admin/v1/pmsproductcategory/{ids}"
        };
    };
    rpc ListProduct (ListProductRequest) returns (ApiReply) {
        option (google.api.http) = {
            get: "/admin/v1/pmsproductList"
        };
    };
    rpc GetProduct (GetProductRequest) returns (ApiReply) {
        option (google.api.http) = {
            get: "/admin/v1/pmsproduct/{id}"
        };
    };
    rpc CreateProduct (Product) returns (ApiReply) {
        option (google.api.http) = {
            post: "/admin/v1/pmsproduct"
        };
    };
    rpc UpdateProduct (Product) returns (ApiReply){
        option (google.api.http) = {
            put: "/admin/v1/pmsproduct"
        };
    };
    rpc DeleteProduct (DeleteProductRequest) returns (ApiReply) {
        option (google.api.http) = {
            delete: "/admin/v1/pmsproduct/{ids}"
        };
    };
    rpc ListProductAttribute (ListProductAttributeRequest) returns (ApiReply) {
        option (google.api.http) = {
            get: "/admin/v1/pmsproductattributeList"
        };
    };
    rpc GetProductAttribute (GetProductAttributeRequest) returns (ApiReply) {
        option (google.api.http) = {
            get: "/admin/v1/pmsproductattribute/{id}"
        };
    };
    rpc CreateProductAttribute (ProductAttribute) returns (ApiReply) {
        option (google.api.http) = {
            post: "/admin/v1/pmsproductattribute"
        };
    };
    rpc UpdateProductAttribute (ProductAttribute) returns (ApiReply){
        option (google.api.http) = {
            put: "/admin/v1/pmsproductattribute"
        };
    };
    rpc DeleteProductAttribute (DeleteProductAttributeRequest) returns (ApiReply) {
        option (google.api.http) = {
            delete: "/admin/v1/pmsproductattribute/{ids}"
        };
    };
    rpc ListProductAttributeCategory (ListProductAttributeCategoryRequest) returns (ApiReply) {
        option (google.api.http) = {
            get: "/admin/v1/pmsproductattributecategoryList"
        };
    };
    rpc GetProductAttributeCategory (GetProductAttributeCategoryRequest) returns (ApiReply) {
        option (google.api.http) = {
            get: "/admin/v1/pmsproductattributecategory/{id}"
        };
    };
    rpc CreateProductAttributeCategory (ProductAttributeCategory) returns (ApiReply) {
        option (google.api.http) = {
            post: "/admin/v1/pmsproductattributecategory"
        };
    };
    rpc UpdateProductAttributeCategory (ProductAttributeCategory) returns (ApiReply){
        option (google.api.http) = {
            put: "/admin/v1/pmsproductattributecategory"
        };
    };
    rpc DeleteProductAttributeCategory (DeleteProductAttributeCategoryRequest) returns (ApiReply) {
        option (google.api.http) = {
            delete: "/admin/v1/pmsproductattributecategory/{ids}"
        };
    };
}

service Api {
    // rpc Ping (.google.protobuf.Empty) returns (.google.protobuf.Empty);
	// rpc SayHello (HelloReq) returns (.google.protobuf.Empty);
	rpc SayHelloURL(HelloReq) returns (HelloResp) {
        option (google.api.http) = {
            get:"/api/v1/cms/say_hello"
        };
    };
    rpc ListAlbum (ListAlbumRequest) returns (ListAlbumReply) {
        option (google.api.http) = {
            get: "/api/v1/cms/albumList"
        };
    };
    rpc GetAlbum (GetAlbumRequest) returns (GetAlbumReply) {
        option (google.api.http) = {
            get: "/api/v1/cms/album/{id}"
        };
    };
}

message HelloReq {
	string name = 1;
}

message HelloResp {
    string Content = 1;
}

message ListAlbumRequest {
    int32 pageSize = 1;
    int32 pageIndex = 2;
    string configKey = 3;
    string configName = 4;
    string configType = 5;
}
message ListAlbumReply {}

message GetAlbumRequest {
    uint64 id = 1;
}
message GetAlbumReply {}

message CreateAlbumRequest {}
message CreateAlbumReply {}

message UpdateAlbumRequest {}
message UpdateAlbumReply {}

message DeleteAlbumRequest {
    string ids = 1;
}
message DeleteAlbumReply {}

message ListBrandRequest {
    int32 pageSize = 1;
    int32 pageIndex = 2;
    string configKey = 3;
    string configName = 4;
    string configType = 5;
}
message ListBrandReply {}

message GetBrandRequest {
    uint64 id = 1;
}
message GetBrandReply {}

message CreateBrandRequest {}
message CreateBrandReply {}

message UpdateBrandRequest {}
message UpdateBrandReply {}

message DeleteBrandRequest {
    string ids = 1;
}
message DeleteBrandReply {}

message ListProductCategoryRequest {
    int32 pageSize = 1;
    int32 pageIndex = 2;
    string configKey = 3;
    string configName = 4;
    string configType = 5;
}
message ListProductCategoryReply {}

message ListProductCategoryTreeRequest {
    int32 pageSize = 1;
    int32 pageIndex = 2;
    string configKey = 3;
    string configName = 4;
    string configType = 5;
}
message ListProductCategoryTreeReply {}

message GetProductCategoryRequest {
    uint64 id = 1;
}
message GetProductCategoryReply {}

message CreateProductCategoryRequest {}
message CreateProductCategoryReply {}

message UpdateProductCategoryRequest {}
message UpdateProductCategoryReply {}

message DeleteProductCategoryRequest {
    string ids = 1;
}
message DeleteProductCategoryReply {}

message ListProductRequest {
    int32 pageSize = 1;
    int32 pageIndex = 2;
    string configKey = 3;
    string configName = 4;
    string configType = 5;
}
message ListProductReply {}

message ListProductTreeRequest {
    int32 pageSize = 1;
    int32 pageIndex = 2;
    string configKey = 3;
    string configName = 4;
    string configType = 5;
}
message ListProductTreeReply {}

message GetProductRequest {
    uint64 id = 1;
}
message GetProductReply {}

message CreateProductRequest {}
message CreateProductReply {}

message UpdateProductRequest {}
message UpdateProductReply {}

message DeleteProductRequest {
    string ids = 1;
}
message DeleteProductReply {}

message ListProductAttributeRequest {
    int32 pageSize = 1;
    int32 pageIndex = 2;
    string configKey = 3;
    string configName = 4;
    string configType = 5;
}
message ListProductAttributeReply {}

message ListProductAttributeTreeRequest {
    int32 pageSize = 1;
    int32 pageIndex = 2;
    string configKey = 3;
    string configName = 4;
    string configType = 5;
}
message ListProductAttributeTreeReply {}

message GetProductAttributeRequest {
    uint64 id = 1;
}
message GetProductAttributeReply {}

message CreateProductAttributeRequest {}
message CreateProductAttributeReply {}

message UpdateProductAttributeRequest {}
message UpdateProductAttributeReply {}

message DeleteProductAttributeRequest {
    string ids = 1;
}
message DeleteProductAttributeReply {}

message ListProductAttributeCategoryRequest {
    int32 pageSize = 1;
    int32 pageIndex = 2;
    string configKey = 3;
    string configName = 4;
    string configType = 5;
}
message ListProductAttributeCategoryReply {}

message ListProductAttributeCategoryTreeRequest {
    int32 pageSize = 1;
    int32 pageIndex = 2;
    string configKey = 3;
    string configName = 4;
    string configType = 5;
}
message ListProductAttributeCategoryTreeReply {}

message GetProductAttributeCategoryRequest {
    uint64 id = 1;
}
message GetProductAttributeCategoryReply {}

message CreateProductAttributeCategoryRequest {}
message CreateProductAttributeCategoryReply {}

message UpdateProductAttributeCategoryRequest {}
message UpdateProductAttributeCategoryReply {}

message DeleteProductAttributeCategoryRequest {
    string ids = 1;
}
message DeleteProductAttributeCategoryReply {}